# cpp-application-template

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile
.github/workflows/: cmake.yml
cmake/: EnableGTest.cmake
libraries/corelib/: CMakeLists.txt
tests/: CMakeLists.txt
